@@ -133,4 +133,52 @@ public abstract class KafkaHeaders {
 	 */
 	public static final String REPLY_PARTITION = PREFIX + "replyPartition";
 
+	/**
+	 * Exception class name for a record published sent to a dead-letter topic.
+	 * @since 2.2
+	 */
+	public static final String DLT_EXCEPTION_FQCN = PREFIX + "dlt-exception-fqcn";
+
+	/**
+	 * Exception stack trace for a record published to a dead-letter topic.
+	 * @since 2.2
+	 */
+	public static final String DLT_EXCEPTION_STACKTRACE = PREFIX + "dlt-exception-stacktrace";
+
+	/**
+	 * Exception message for a record published to a dead-letter topic.
+	 * @since 2.2
+	 */
+	public static final String DLT_EXCEPTION_MESSAGE = PREFIX + "dlt-exception-message";
+
+	/**
+	 * Original topic for a record published to a dead-letter topic.
+	 * @since 2.2
+	 */
+	public static final String DLT_ORIGINAL_TOPIC = PREFIX + "dlt-original-topic";
+
+	/**
+	 * Original partition for a record published to a dead-letter topic.
+	 * @since 2.2
+	 */
+	public static final String DLT_ORIGINAL_PARTITION = PREFIX + "dlt-original-partition";
+
+	/**
+	 * Original offset for a record published to a dead-letter topic.
+	 * @since 2.2
+	 */
+	public static final String DLT_ORIGINAL_OFFSET = PREFIX + "dlt-original-offset";
+
+	/**
+	 * Original timestamp for a record published to a dead-letter topic.
+	 * @since 2.2
+	 */
+	public static final String DLT_ORIGINAL_TIMESTAMP = PREFIX + "dlt-original-timestamp";
+
+	/**
+	 * Original timestamp type for a record published to a dead-letter topic.
+	 * @since 2.2
+	 */
+	public static final String DLT_ORIGINAL_TIMESTAMP_TYPE = PREFIX + "dlt-original-timestamp-type";
+
 }
